Alexandrite Ore Particles work

--- a/src/main/resources/assets/relixmod/lang/en_us.json
+++ b/src/main/resources/assets/relixmod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.relixmod.alexandrite-crystal": "Alexandrite Crystal",
 
-  "block.relixmod.alexandrite_ore": "Alexandrite Ore"
+  "block.relixmod.alexandrite_ore": "Alexandrite Ore",
+
+  "itemGroup.relixmod.relix": "Relix"
 }
